ella-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__block-stmt.snap
---
source: ella-parser/src/parser/stmt.rs
expression: "stmt(\"{ 1; }\")"
---
Stmt {
    kind: Block(
        [
            Stmt {
                kind: ExprStmt(
                    Expr {
                        kind: NumberLit(
                            1.0,
                        ),
                        span: 2..3,
                    },
                ),
                span: 2..4,
            },
        ],
    ),
    span: 0..6,
}
