ella-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__fn-declaration.snap
---
source: ella-parser/src/parser/stmt.rs
expression: "stmt(\"fn foo() {}\")"
---
Stmt {
    kind: FnDeclaration {
        ident: "foo",
        params: [],
        body: [],
    },
    span: 0..11,
}
