ella-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__if-stmt.snap
---
source: ella-parser/src/parser/stmt.rs
expression: "stmt(r#\"\n                if condition {\n                    if_block();\n                }\"#)"
---
IfElseStmt {
    condition: Expr {
        kind: Identifier(
            "condition",
        ),
        span: 20..29,
    },
    if_block: [
        ExprStmt(
            Expr {
                kind: FnCall {
                    callee: Expr {
                        kind: Identifier(
                            "if_block",
                        ),
                        span: 52..60,
                    },
                    args: [],
                },
                span: 52..62,
            },
        ),
    ],
    else_block: None,
}
