ella-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__let-declaration-with-type-annotation.snap
---
source: ella-parser/src/parser/stmt.rs
expression: "stmt(\"let x: u32 = 2;\")"
---
Stmt {
    kind: LetDeclaration {
        ident: "x",
        initializer: Expr {
            kind: NumberLit(
                2.0,
            ),
            span: 13..14,
        },
        ty: Some(
            TypePath {
                ident: "u32",
                span: 7..10,
            },
        ),
    },
    span: 0..15,
}
