ella-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__let-declaration.snap
---
source: ella-parser/src/parser/stmt.rs
expression: "stmt(\"let x = 2;\")"
---
LetDeclaration {
    ident: "x",
    initializer: Expr {
        kind: NumberLit(
            2.0,
        ),
        span: 8..9,
    },
}
