ella-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__return-stmt-with-expr.snap
---
source: ella-parser/src/parser/stmt.rs
expression: "stmt(\"return 1 + 2;\")"
---
ReturnStmt(
    Expr {
        kind: Binary {
            lhs: Expr {
                kind: NumberLit(
                    1.0,
                ),
                span: 7..8,
            },
            op: Plus,
            rhs: Expr {
                kind: NumberLit(
                    2.0,
                ),
                span: 11..12,
            },
        },
        span: 7..12,
    },
)
