ella-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__return-stmt.snap
---
source: ella-parser/src/parser/stmt.rs
expression: "stmt(\"return 1;\")"
---
ReturnStmt(
    Expr {
        kind: NumberLit(
            1.0,
        ),
        span: 7..8,
    },
)
